# fermion

./: Cargo.toml  README.md
src/: de.rs  lib.rs  pathological.rs  ser.rs
